fixed issue of unknown white space showing up on page

--- a/client/src/pages/Login/login.css
+++ b/client/src/pages/Login/login.css
@@ -38,7 +38,6 @@ form{
     background-repeat: no-repeat;
     background-position: center;
     cursor: url("https://img.icons8.com/color/50/000000/basketball.png"), auto;
-    position: absolute;
     
 }
   /* submit button */
